# butlerd-rs

./: Cargo.toml  README.md
src/: Packaged.rs  Responses.rs  error.rs  lib.rs  responses.rs
tests/: lib.rs
