[package]
name = "butlerd"
version = "0.1.2"
authors = ["nicohman <nicohman@demenses.net>"]
description = "A crate for using the butlerd API"
repository = "https://git.sr.ht/~nicohman/butlerd-rs"
license = "GPL-3.0"
keywords = ["butler", "butlerd", "itch", "itchio"]
[dependencies]
reqwest = "0.9.2"
serde_json = "1.0.27"
serde_derive = "1.0.78"
serde = "1.0.78"
hyper = "0.12.10"
regex = "1"
rand = "0.5.5"
error-chain = "0.12.0"
dirs = "1.0.4"